--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Shreyans",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "connect-mongo": "^4.4.1",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
